<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/play"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginEnd="-20dp"
        android:background="@drawable/btn_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/right_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:hint="@string/nick"
            android:textColorHint="@color/gray"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textSize="@dimen/_15sdp" />

    </FrameLayout>

    <Button
        android:id="@+id/settings"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn_settings"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <include layout="@layout/news_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="@dimen/_15sdp">

            <TextView
                android:id="@+id/news_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/news_header"
                android:textColor="@color/white"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeStepGranularity="1sp"
                android:maxLines="2"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/news_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/news_caption"
                android:textColor="@color/gray"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeMaxTextSize="12sp"
                android:autoSizeStepGranularity="1sp"
                android:maxLines="3"
                android:ellipsize="end" />
        </LinearLayout>

    </FrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/news"
        android:textColor="@color/white"
        android:textSize="@dimen/_23sdp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2" />

    <Button
        android:id="@+id/telegram"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_telegram"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2" />

    <Button
        android:id="@+id/youtube"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn_youtube"
        app:layout_constraintBottom_toTopOf="@+id/support"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@+id/telegram" />

    <Button
        android:id="@+id/support"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_support"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>